asset-mgr-ms/deployments/assetmgrms-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: asset-mgr-ms-svc
  labels:
    chart: asset-mgr-ms
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: asset-mgr-ms-svc
  selector:
    app: asset-mgr-ms
