asset-mgr-ms/deployments/assetmgrms.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: asset-mgr-ms
  name: asset-mgr-ms
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: asset-mgr-ms
    spec:
      containers:
      - image: ibmcase/asset-mgr-ms
        imagePullPolicy: Always
        name: asset-mgr-ms
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: asset-mgr-ms-svc
  labels:
    chart: asset-mgr-ms
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: asset-mgr-ms-svc
  selector:
    app: asset-mgr-ms
