asset-mgr-ms/deployments/assetmgrms-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: assetmanagement
  labels:
    app: asset-mgr-ms
spec:
  rules:
    - host: assetmanagement.greencompute.ibmcase.com
      http:
        paths:
          - path: /assetmgrms
            backend:
              serviceName: asset-mgr-ms-svc
              servicePort: 8080
